# cargo-cpack

./: Cargo.toml  README-jp.md  README.md
cargo-cpack-vscode/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
cargo-cpack-vscode/src/: extension.ts
example/: Cargo.toml  README-jp.md  README.md
example/src/: a.rs  b.rs  lib.rs
example/src/a/: b.rs  c.rs  d.rs  e.rs
example/src/a/c/: d.rs
src/: cargo.rs  dependency.rs  format.rs  main.rs  package.rs  parse_target.rs
