[package]
name = "cargo-cpack"
version = "0.1.0"
edition = "2021" 
default-run = "cargo-cpack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
proc-macro2 = "1.0.69"
quote = "1.0.33"
serde = { version = "1.0.190", features = ["derive"] }
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
toml = "0.8.6"
